k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sales-engagement
  labels:
    name: sales-engagement
    environment: production
